Use G1 for constrained Pterodactyl server