@@ -27,14 +27,18 @@ structures and gameplay systems behave correctly.
 
 ## Known issues
 
-### Pterodactyl 7 GiB ZGC heap — resolved configuration
+### Pterodactyl Generational ZGC — rejected for the server
 
 The first Pterodactyl multiplayer launch reached `Done` and accepted a player,
 then the Linux memory-cgroup OOM killer terminated Java at essentially the full
 8.4 GiB container limit. The JVM had been given a 7 GiB maximum heap, leaving
-insufficient native/container headroom. Use `-Xms1G -Xmx6G -XX:+UseZGC
--XX:+ZGenerational` for the next test. This was a host-enforced OOM kill, not a
-Java exception or mod crash.
+insufficient native/container headroom. A second clean-world test at `-Xmx6G`
+reached roughly 7.8 GiB total container use and took 543 seconds to prepare
+spawn. It did eventually complete and honor the queued stop cleanly, proving it
+was slow rather than deadlocked. Use `-Xms1G -Xmx6G -XX:+UseG1GC` for the next
+server test. Generational ZGC remains appropriate for the better-provisioned
+Distant Horizons client. The original failure was a host-enforced OOM kill, not
+a Java exception or mod crash.
 
 ### Ecological overlap and broken hollow-log placement — configured
 
